[package]
name = "nextup"
version = "0.1.1"
authors = ["Kathryn Hite <kghite@gmail.com>"]
description = "nextup keeps your barrier to starting development sessions under control by tracking the next action to take on a maximum of 3 active projects."
license = "MIT/X11 OR Apache-2.0"
repository = "https://github.com/kghite/nextup"
readme = "README.md"
edition = "2021"
keywords = ["cli", "workflow"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.0", features = ["derive"] }
confy = { version = "0.5.1"}
env_logger = "0.10.0"
log = "0.4.0"
serde = "^1.0"
serde_derive = "1.0.171"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
